# namedstruct

./: .gitignore  .python-version  CMakeLists.txt  README.md  __init__.py  bithelper.py  calm_down.py  compat.py  constants.py  n_types.py  namedStructTests.h  namedstruct.py  reset_env.sh  setup.py  stringhelper.py  tests.py  types.py  values.py
include/namedstruct/: bits.h
namedstruct/: __init__.py  bithelper.py  bits.h  getlsb.h  n_types.py  namedStructTests.mm  namedstruct.py  shiftTests.mm  shifts.h  stringhelper.py  testBits.mm  tests.py  values.py  zigzag.h
src/: CMakeLists.txt  XCTestCpp.h  bits.cpp  bits.h  namedStructTests.h  namedStructTests.mm
